Minor fix to ensure that pre tags are properly aligned, with or without content for the tag.

--- a/src/default/assets/css/elements/_comment.sass
+++ b/src/default/assets/css/elements/_comment.sass
@@ -28,11 +28,8 @@ dl.tsd-comment-tags
 
     dd
         margin: 0 0 10px 0
-        &:after
+        pre, &:after
             clear: both
-
-    pre
-        margin-top: 14px
 
     p
         margin: 0
